[gd_scene load_steps=2 format=3 uid="uid://ctq0a8w3wavta"]

[ext_resource type="Script" path="res://ProjectInterface/StartInfo/Templates/templateField.gd" id="1_t5ckl"]

[node name="templateField" type="GraphNode"]
offset_right = 174.0
offset_bottom = 113.0
title = "Media Version"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color(1, 1, 1, 1)
slot/6/left_icon = null
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color(1, 1, 1, 1)
slot/6/right_icon = null
slot/6/draw_stylebox = true
slot/7/left_enabled = false
slot/7/left_type = 0
slot/7/left_color = Color(1, 1, 1, 1)
slot/7/left_icon = null
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color(1, 1, 1, 1)
slot/7/right_icon = null
slot/7/draw_stylebox = true
slot/8/left_enabled = false
slot/8/left_type = 0
slot/8/left_color = Color(1, 1, 1, 1)
slot/8/left_icon = null
slot/8/right_enabled = false
slot/8/right_type = 0
slot/8/right_color = Color(1, 1, 1, 1)
slot/8/right_icon = null
slot/8/draw_stylebox = true
script = ExtResource("1_t5ckl")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
text = "Name"

[node name="NameEdit" type="LineEdit" parent="."]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="."]
layout_mode = 2
text = "Type"

[node name="TypeSelect" type="OptionButton" parent="."]
layout_mode = 2
item_count = 5
popup/item_0/text = "Audio"
popup/item_0/id = 0
popup/item_1/text = "Boolean"
popup/item_1/id = 1
popup/item_2/text = "Graphic"
popup/item_2/id = 2
popup/item_3/text = "Number"
popup/item_3/id = 3
popup/item_4/text = "String"
popup/item_4/id = 4

[node name="DefaultValue" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Default Value"

[node name="DefaultEdit" type="LineEdit" parent="."]
layout_mode = 2

[node name="DefaultBoolean" type="CheckButton" parent="."]
layout_mode = 2
text = "Boolean"

[node name="VarLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Variable"

[node name="VarEdit" type="LineEdit" parent="."]
layout_mode = 2
